<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account"
            android:title="@string/nav_profile" />

        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_message"
            android:title="@string/nav_message" />

    </group>

    <item android:title="@string/nav_communicate">
        <menu>

            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_send"
                android:title="@string/nav_send" />

        </menu>
    </item>


</menu>