<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_gradients"
    android:padding="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile_text"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="24sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        android:textColor="#000"/>

    <EditText
        android:id="@+id/update_profile_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edittext_style"
        android:hint="@string/name"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        android:textColor="#000"/>

    <EditText
        android:id="@+id/update_profile_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edittext_style"
        android:hint="@string/user_name"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        android:textColor="#000"/>

    <EditText
        android:id="@+id/update_profile_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edittext_style"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/update_profile_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:layout_weight="1"
            android:textSize="20sp"
            android:padding="15dp"
            android:background="@color/colorPrimaryDark"
            android:elevation="8dp"
            android:layout_marginVertical="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="15dp"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/update_profile_updatebtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Update"
            android:textSize="20sp"
            android:padding="15dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:elevation="8dp"
            android:layout_marginVertical="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="5dp"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</LinearLayout>