<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#DDDBDB"
    tools:context=".MainFragment.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        android:weightSum="8">


        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:columnCount="1"
            android:padding="10dp"
            android:rowCount="1">


            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                app:cardCornerRadius="35dp"
                app:cardElevation="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingEnd="30dp"
                    android:paddingStart="30dp"
                    android:text="@string/my_payment_information"
                    android:textColor="@color/colorAccent"
                    android:textSize="22sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:columnCount="1"
            android:padding="10dp"
            android:rowCount="1">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="#000">

                    <TableRow
                        android:background="#fff"
                        android:paddingBottom="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:text="@string/last_payment"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </TableRow>

                    <TableRow android:layout_weight="1">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginHorizontal="1dp"
                            android:layout_marginVertical="1dp"
                            android:background="@android:color/darker_gray"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="Month"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginVertical="1dp"
                            android:layout_marginEnd="1dp"
                            android:layout_weight="1"
                            android:background="@android:color/darker_gray"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="Money"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </TableRow>

                    <TableRow android:layout_weight="1">

                        <TextView
                            android:id="@+id/lastPaymentMonth"

                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginHorizontal="1dp"
                            android:layout_marginBottom="1dp"
                            android:background="#fff"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="January"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/lastPaymentMoney"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="1dp"
                            android:layout_marginBottom="1dp"
                            android:layout_weight="1"
                            android:background="#fff"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="2000"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </TableRow>

                    <TableRow android:background="#fff">

                        <TextView
                            android:id="@+id/seeUserFullPayment"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/full_payment"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </TableRow>

                </TableLayout>


            </androidx.cardview.widget.CardView>


        </GridLayout>


        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:columnCount="1"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:rowCount="1">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp">

                <TextView
                    android:id="@+id/userTotalMoney"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/total_amount"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

        </GridLayout>


        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />


        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:alignmentMode="alignMargins"
            android:columnCount="1"
            android:padding="10dp"
            android:rowCount="1">


            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                app:cardCornerRadius="35dp"
                app:cardElevation="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingEnd="30dp"
                    android:paddingStart="30dp"
                    android:text="BSS Total Amount"
                    android:textColor="@color/colorAccent"
                    android:textSize="22sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

        </GridLayout>


        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:columnCount="1"
            android:padding="10dp"
            android:rowCount="1">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp">

                <TextView
                    android:id="@+id/allTotalMoney"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/total_amount"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

        </GridLayout>

</LinearLayout>

</FrameLayout>